# getman

./: Application  README.md  meson.build
data/: com.github.ibrahim4529.getman.appdata.xml  com.github.ibrahim4529.getman.desktop
src/: Application.vala
